feat: City, CityArea & Location model, migrations.
- feat: move category_id from Post to Location
- feat: seed City & CityArea
